interfaces/csound5.lisp

         (virtual-funcall
           this
           113
           0
           :pointer
           this
           :pointer
           value
           :int
           n
           :int))
       (defun csound-chan-oaget (this value n)
         (virtual-funcall
           this
           114
           0
           :pointer
           this
           :pointer
           value
           :int
           n
           :int))
       (defun csound-create-configuration-variable (this
                                                    name
                                                    p
                                                    type
                                                    flags
                                                    min
                                                    max
                                                    short-desc
                                                    long-desc)
         (virtual-funcall
           this
           115
           0
           :pointer
           this
           :pointer
           name
           :pointer
           p
           :int
           type
           :int
           flags
           :pointer
           min
           :pointer
           max
           :pointer
           short-desc
           :pointer
           long-desc
           :int))
       (defun csound-copy-global-configuration-variable (this name p)
         (virtual-funcall
           this
           116
           0
           :pointer
           this
           :pointer
           name
           :pointer
           p
           :int))
       (defun csound-copy-global-configuration-variables (this)
         (virtual-funcall this 117 0 :pointer this :int))
       (defun csound-set-configuration-variable (this name value)
         (virtual-funcall
           this
           118
           0
           :pointer
           this
           :pointer
           name
           :pointer
           value
           :int))
       (defun csound-parse-configuration-variable (this name value)
         (virtual-funcall
           this
           119
           0
           :pointer
           this
           :pointer
           name
           :pointer
           value
           :int))
       (defun csound-query-configuration-variable (this name)
         (virtual-funcall
           this
           120
           0
           :pointer
           this
           :pointer
           name
           :pointer))
       (defun csound-list-configuration-variables (this)
         (virtual-funcall this 121 0 :pointer this :pointer))
       (defun csound-delete-configuration-variable (this name)
         (virtual-funcall
           this
           122
           0
           :pointer
           this
           :pointer
           name
           :int))
       (progn (cffi:defcfun ("_ZN6CsoundC1Ev" csound-new-1-)
                            :void
                            (this :pointer))
              (defun csound-new-1 ()
                (let ((-pobj- (cffi:foreign-alloc 'csound)))
                  (csound-new-1- -pobj-)
                  -pobj-)))
       (progn (cffi:defcfun ("_ZN6CsoundC1EPv" csound-new-2-)
                            :void
                            (this :pointer)
                            (host-data :pointer))
              (defun csound-new-2 (host-data)
                (let ((-pobj- (cffi:foreign-alloc 'csound)))
                  (csound-new-2- -pobj- host-data)
                  -pobj-)))
       (defun csound-delete (this)
         (virtual-funcall this 124 0 :pointer this :void))
       (defun csound-thread-lock-lock (this milliseconds)
         (virtual-funcall
           this
           2
           0
           :pointer
           this
           size-t
           milliseconds
           :int))
       (defun csound-thread-lock-lock-1 (this)
         (virtual-funcall this 3 0 :pointer this :void))
       (defun csound-thread-lock-try-lock (this)
         (virtual-funcall this 4 0 :pointer this :int))
       (defun csound-thread-lock-unlock (this)
         (virtual-funcall this 5 0 :pointer this :void))
       (progn (cffi:defcfun ("_ZN16CsoundThreadLockC1Ev"
                             csound-thread-lock-new-1-)
                            :void
                            (this :pointer))
              (defun csound-thread-lock-new-1 ()
                (let ((-pobj- (cffi:foreign-alloc 'csound-thread-lock)))
                  (csound-thread-lock-new-1- -pobj-)
                  -pobj-)))
       (progn (cffi:defcfun ("_ZN16CsoundThreadLockC1Ei"
                             csound-thread-lock-new-2-)
                            :void
                            (this :pointer)
                            (locked :int))
              (defun csound-thread-lock-new-2 (locked)
                (let ((-pobj- (cffi:foreign-alloc 'csound-thread-lock)))
                  (csound-thread-lock-new-2- -pobj- locked)
                  -pobj-)))
       (defun csound-thread-lock-delete (this)
         (virtual-funcall this 7 0 :pointer this :void))
       (defun csound-rand-mt-random (this)
         (virtual-funcall this 2 0 :pointer this uint32-t))
       (defun csound-rand-mt-seed (this seed-val)
         (virtual-funcall
           this
           3
           0
           :pointer
           this
           uint32-t
           seed-val
           :void))
       (defun csound-rand-mt-seed-1 (this init-key key-length)
         (virtual-funcall
           this
           4
           0
           :pointer
           this
           :pointer
           init-key
           :int
           key-length
           :void))
       (progn (cffi:defcfun ("_ZN12CsoundRandMTC1Ev" csound-rand-mt-new-1-)
                            :void
                            (this :pointer))
              (defun csound-rand-mt-new-1 ()
                (let ((-pobj- (cffi:foreign-alloc 'csound-rand-mt)))
                  (csound-rand-mt-new-1- -pobj-)
                  -pobj-)))
       (progn (cffi:defcfun ("_ZN12CsoundRandMTC1Ej" csound-rand-mt-new-2-)
                            :void
                            (this :pointer)
                            (seed-val uint32-t))
              (defun csound-rand-mt-new-2 (seed-val)
                (let ((-pobj- (cffi:foreign-alloc 'csound-rand-mt)))
                  (csound-rand-mt-new-2- -pobj- seed-val)
                  -pobj-)))
       (progn (cffi:defcfun ("_ZN12CsoundRandMTC1EPKji" csound-rand-mt-new-3-)
                            :void
                            (this :pointer)
                            (init-key :pointer)
                            (key-length :int))
              (defun csound-rand-mt-new-3 (init-key key-length)
                (let ((-pobj- (cffi:foreign-alloc 'csound-rand-mt)))
                  (csound-rand-mt-new-3- -pobj- init-key key-length)
                  -pobj-)))
       (defun csound-rand-mt-delete (this)
         (virtual-funcall this 6 0 :pointer this :void))
       (defun csound-timer-get-real-time (this)
         (virtual-funcall this 2 0 :pointer this :double))
       (defun csound-timer-get-cputime (this)
         (virtual-funcall this 3 0 :pointer this :double))
       (defun csound-timer-reset (this)
         (virtual-funcall this 4 0 :pointer this :void))
       (progn (cffi:defcfun ("_ZN11CsoundTimerC1Ev" csound-timer-new-1-)
                            :void
                            (this :pointer))
              (defun csound-timer-new-1 ()
                (let ((-pobj- (cffi:foreign-alloc 'csound-timer)))
                  (csound-timer-new-1- -pobj-)
                  -pobj-)))
       (defun csound-timer-delete (this)
         (virtual-funcall this 6 0 :pointer this :void))
       (cffi:defcfun ("csoundChanOAGet" csound-chan-oaget-1)
                     :int
                     (anonymous4685 :pointer)
                     (value :pointer)
                     (n :int))
       (cffi:defcfun ("csoundChanIASet" csound-chan-iaset-1)
                     :int
                     (anonymous4686 :pointer)
                     (value :pointer)
                     (n :int))
       (cffi:defcfun ("csoundChanOKGet" csound-chan-okget-1)
                     :int
                     (anonymous4687 :pointer)
                     (value :pointer)
                     (n :int))
       (cffi:defcfun ("csoundChanIKSet" csound-chan-ikset-1)
                     :int
                     (anonymous4688 :pointer)
                     (value :float)
                     (n :int))
       (cffi:defcfun ("csoundRandMT" csound-rand-mt) uint32-t (p :pointer))
       (cffi:defcfun ("csoundSeedRandMT" csound-seed-rand-mt)
                     :void
                     (p :pointer)
                     (init-key :pointer)
                     (key-length uint32-t))
       (cffi:defcfun ("csoundRand31" csound-rand31) :int (seed-val :pointer))
       (cffi:defcfun ("csoundGetControlChannelParams"
                      csound-get-control-channel-params-1)
                     :int
                     (anonymous4689 :pointer)
                     (name :pointer)
                     (dflt :pointer)
                     (min :pointer)
                     (max :pointer))
       (cffi:defcfun ("csoundSetControlChannelParams"
                      csound-set-control-channel-params-1)
                     :int
                     (anonymous4690 :pointer)
                     (name :pointer)
                     (type :int)
                     (dflt :float)
                     (min :float)
                     (max :float))
       (cffi:defcfun ("csoundDeleteChannelList" csound-delete-channel-list-1)
                     :void
                     (anonymous4691 :pointer)
                     (lst :pointer))
       (cffi:defcfun ("csoundListChannels" csound-list-channels-1)
                     :int
                     (anonymous4692 :pointer)
                     (lst :pointer))
       (cffi:defcfun ("csoundGetChannelPtr" csound-get-channel-ptr-1)
                     :int
                     (anonymous4693 :pointer)
                     (p :pointer)
                     (name :pointer)
                     (type :int))
       (cffi:defcfun ("csoundGetUtilityDescription"
                      csound-get-utility-description-1)
                     :pointer
                     (anonymous4694 :pointer)
                     (util-name :pointer))
       (cffi:defcfun ("csoundDeleteUtilityList" csound-delete-utility-list-1)
                     :void
                     (anonymous4695 :pointer)
                     (lst :pointer))
       (cffi:defcfun ("csoundListUtilities" csound-list-utilities-1)
                     :pointer
                     (anonymous4696 :pointer))
       (cffi:defcfun ("csoundRunUtility" csound-run-utility-1)
                     :int
                     (anonymous4697 :pointer)
                     (name :pointer)
                     (argc :int)
                     (argv :pointer))
       (cffi:defcfun ("csoundRegisterSenseEventCallback"
                      csound-register-sense-event-callback-1)
                     :int
                     (anonymous4698 :pointer)
                     (func :pointer)
                     (user-data :pointer))
       (cffi:defcfun ("csoundGetRtPlayUserData" csound-get-rt-play-user-data-1)
                     :pointer
                     (anonymous4699 :pointer))
       (cffi:defcfun ("csoundGetRtRecordUserData"
                      csound-get-rt-record-user-data-1)
                     :pointer
                     (anonymous4700 :pointer))
